# LIMO_Velo

./: .gitignore  .gitmodules  README.md
.github/workflows/: release.yml
cpp/limo-velo/: CMakeLists.txt
cpp/limo-velo/include/: Accumulator.hpp  Common.hpp  Compensator.hpp  Limovelo.hpp  Mapper.hpp  Objects.hpp  Params.hpp  Utils.hpp
cpp/limo-velo/src/: Limovelo.cpp  Params.cpp
cpp/limo-velo/src/modules/: Accumulator.cpp  Compensator.cpp  Localizator.cpp  Mapper.cpp
cpp/limo-velo/src/objects/: Buffer.cpp  IMU.cpp  Match.cpp  Plane.cpp  Point.cpp  RotTransl.cpp  State.cpp
cpp/limovelo_cpp/: CMakeLists.txt
cpp/limovelo_cpp/include/: Accumulator.hpp  Common.hpp  Compensator.hpp  Limovelo.hpp  Localizator.hpp  Objects.hpp  Params.hpp
cpp/limovelo_cpp/src/: Limovelo.cpp  Params.cpp  Utils.cpp
cpp/limovelo_cpp/src/modules/: Accumulator.cpp  Compensator.cpp  Localizator.cpp  Mapper.cpp
cpp/limovelo_cpp/src/objects/: Normal.cpp  Plane.cpp  Point.cpp  State.cpp
python/: CMakeLists.txt  limovelo_cpp  pyproject.toml
python/src/: main.cpp
python/src/limovelo/: __init__.py
python/tests/: test_basic.py
ros2/: CMakeLists.txt  package.xml
ros2/config/: ouster.yaml
ros2/launch/: ouster.launch.py
ros2/src/: PointCloudProcessor.cpp  PointCloudProcessor.hpp  Publishers.hpp  limovelo_node.cpp  limovelo_node.hpp
